# orchwipy

./: .gitignore  LICENSE  Makefile  README.md  py_from_md.py  pyproject.toml  sample.mk
orchwipy/: __init__.py  call_graph.py  cmd.py  delayed_runner_lambda.py  func.py  microservice.py  plot_graph.py  types.py
tests/: sample.py  sample_arg.json  test_missing_arg.py  test_run.py
