[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "orchwipy"
version = "0.1.0"
authors = [{ name = "Sankho T S", email = "bobatnet@gmail.com" }]
description = "Create data orchestration pipelines over AWS Lambda functions from within python code using decorators"
readme = "README.md"
dependencies = ["PyYAML", "boto3 >= 1.10", "networkx"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sankho-t/orchwipy"
Issues = "https://github.com/sankho-t/orchwipy/issues"

[tool.setuptools]
packages = ["orchwipy"]

[tool.setuptools.package-data]
"orchwipy" = ["py.typed"]
